# llm-debugger

./: .env  README.md  env.backend.example
.cursor/plans/: cfg-279463a0.plan.md  ll-1090404e.plan.md  (+5 more)
client/: Dockerfile  env.frontend.example  package-lock.json  package.json  vite.config.ts
data/: cfg_format.json  cfg_format2.json  example_input.md  example_input.txt  generated_cfg.json  sample_codebase.json  sample_codebase_cfg.json
graph_gen/: cfg_builder.py  flow_generator.ipynb  prompts.py
mcp/: .gitignore  __init__.py  api_routes.py  code_graph_output.json  code_nodes_output.json  dummy_cfg.py  extractors.py  main.py  mcp_routes.py  mcp_tools.py  models.py  nixpacks.toml  pyproject.toml
mcp/api/: __init__.py  control_flow.py  debug_fix_instructions.py  test_cases.py
mcp/contexts/: dummy_code_context.txt  dummy_graph.json
mcp/core/: __init__.py  agent.py  api_routes.py  block_trace_runner.py  create_ctrlflow_json.py  debug_analysis_llm.py  debug_types.py  dummy_cfg.py  extractors.py  llm_workflow_orchestrator.py  mcp_routes.py  mcp_tools.py  runtime_tracer.py  source_enhancement_llm.py  storage.py  subprocess_executor.py  test_generation_llm.py  test_generation_two_step_plan.md
mcp/demos/: README.md  __init__.py  llm_workflow_demo.py
mcp/docs/: ADDING_NEW_TOOLS.md  CONNECTION_ID_RESEARCH.md  CURSOR_MCP_SETUP.md  DEPLOYMENT_STATUS.md  README.md  SSE_SETUP.md  TEST_HTTP.md  TEST_MCP.md  TEST_RESULTS.md
mcp/instructions/: 2025-01-01_00-00.txt  2025-11-23_00-42.txt
mcp/tests/: README.md  test_http.sh  test_ldb_methodology_multi_file.py  test_mcp.py
(+18 files in other folders)
