[project]
name = "aie_hackathon_mcp"
version = "0.1.0"
description = "Bridge between coding agent/API/frontend "
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "fastmcp>=0.1.0",
    "pydantic-ai-slim[google,groq]>=1.22.0",
    "pydantic-evals>=1.22.0",
    "requests>=2.32.5",
    "uvicorn>=0.22.0",
    "instructor>=1.0.0",
    "groq>=0.36.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "api*"]
